Fixing Issue #496
Acknowledgement text does not visible but shows up when you refresh

--- a/themes/classic/main.css
+++ b/themes/classic/main.css
@@ -246,3 +246,6 @@
 	color: #336600;
 }
 
+.tholdLog {
+	white-space: pre !important;
+}
