--- a/themes/dark/main.css
+++ b/themes/dark/main.css
@@ -268,3 +268,6 @@
 	color: #336600;
 }
 
+.tholdLog {
+	white-space: pre !important;
+}
