--- a/themes/modern/main.css
+++ b/themes/modern/main.css
@@ -262,3 +262,6 @@
 	color: #336600;
 }
 
+.tholdLog {
+	white-space: pre !important;
+}
