--- a/themes/paper-plane/main.css
+++ b/themes/paper-plane/main.css
@@ -242,3 +242,6 @@
 	color: #336600;
 }
 
+.tholdLog {
+	white-space: pre !important;
+}
