--- a/themes/paw/main.css
+++ b/themes/paw/main.css
@@ -268,3 +268,7 @@
 	color: #336600;
 }
 
+.tholdLog {
+	white-space: pre !important;
+}
+
